@@ -1,4 +1,4 @@
-// Copyright 2005, 2006 Global Virtual Airlines Group. All Rights Reserved.
+// Copyright 2005, 2006, 2008 Global Virtual Airlines Group. All Rights Reserved.
 package org.deltava.commands.cooler;
 
 import java.util.*;
@@ -23,7 +23,7 @@ import org.deltava.util.StringUtils;
 /**
  * A Web Site Command to handle Water Cooler response posting and editing.
  * @author Luke
- * @version 1.0
+ * @version 2.1
  * @since 1.0
  */
 
@@ -164,8 +164,8 @@ public class ThreadReplyCommand extends AbstractCommand {
 					wdao.update(msg);
 				} else {
 					ctx.setAttribute("isReply", Boolean.TRUE, REQUEST);
-					thread.addPost(msg);
 					wdao.write(msg);
+					thread.addPost(msg);
 				}
 				
 				wdao.synchThread(thread);
@@ -214,7 +214,7 @@ public class ThreadReplyCommand extends AbstractCommand {
 			mailer.send(notifyList);
 
 			// Save notification message count
-			ctx.setAttribute("notifyMsgs", new Integer(notifyList.size()), REQUEST);
+			ctx.setAttribute("notifyMsgs", Integer.valueOf(notifyList.size()), REQUEST);
 		}
 		
 		// Forward to the JSP
